# Radon

./: .gitignore  App.cpp  BUILD_INSTRUCTIONS.md  CMakeLists.txt  Info.plist  Main.cpp  Main.hpp  Makefile  README.md  TextEditorRequirements  build.py  filesystem.cpp  install.py  main.cpp  setup.py
Radon/: Radon  TextEditorRequirements
Radon/gui/: Main.cpp  Main.hpp
dep/: HOW_TO_BUILD_WXWIDGETS
dep/wxWidgets/gtk-build/lib/wx/config/: gtk3-unicode-static-3.1  inplace-gtk3-unicode-static-3.1
dep/wxWidgets/gtk-build/lib/wx/include/gtk3-unicode-static-3.1/wx/: setup.h
filesystem/: filesystem.cpp
gui/: App.hpp  Main.cpp  Main.hpp
src/: App.cpp  App.h  Main.cpp  Main.h
